ingress/node.yml
apiVersion: v1
kind: Pod
metadata:
    name: webapp
    labels:
      app: webapp
spec:
  containers:
    - name: pythonapp
      image: armcool004/color_splash_from_cursorai
      ports:
        - containerPort: 5000
---
