ingress/interactive-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: logger-svc
spec:
  type: ClusterIP
  selector:
    app: logger
  ports:
    - port: 80
      targetPort: 8080
