ingress/node-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pythonsvc
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - port: 5000
      targetPort: 5000
        #      nodePort: 30171
