ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/lib"
            backend:
              service:
                name: logger-svc
                port:
                  number: 80
          - pathType: Prefix
            path: "/python"
            backend:
              service:
                name: pythonsvc
                port:
                  number: 5000
